# serverchip-esp8266

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  platformio.ini
src/: helpers.cpp  helpers.h  main.cpp  main.h  models.h  ws_events.cpp  ws_events.h
